--- a/web/WEB-INF/fragment/navbar.jspf
+++ b/web/WEB-INF/fragment/navbar.jspf
@@ -9,7 +9,7 @@
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <nav class="nav navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-        <a href="#" class="navbar-brand">Website</a>
+        <a href="${pageContext.request.contextPath}" class="navbar-brand">Website</a>
 
         <button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
             <span class="glyphicon glyphicon-list"></span>
@@ -17,14 +17,14 @@
 
         <div class="collapse navbar-collapse navHeaderCollapse">
             <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="#">Strona główna</a> </li>
-                <li><a href="#">Dodaj</a> </li>
+                <li class="active"><a href="${pageContext.request.contextPath}">Strona główna</a> </li>
+                <li><a href="${pageContext.request.contextPath}/add">Dodaj</a> </li>
                 <c:choose>
                     <c:when test="${not empty sessionScope.user}">
-                        <li><a href="logout">Wyloguj się</a> </li>
+                        <li><a href="${pageContext.request.contextPath}/logout">Wyloguj się</a> </li>
                     </c:when>
                     <c:otherwise>
-                        <li><a href="login">Zaloguj się</a> </li>
+                        <li><a href="${pageContext.request.contextPath}/login">Zaloguj się</a> </li>
                     </c:otherwise>
                 </c:choose>
             </ul>
